continuación del componente Acerca de

--- a/src/app/componentes/acercade/acercade.component.html
+++ b/src/app/componentes/acercade/acercade.component.html
@@ -1,13 +1,19 @@
 <div id="contenedor">
-<div></div>
+   <div id="banner">
+      <!-- Aquí va el banner -->
+   </div>
+
+
+
    <div id="acerca"> 
 
-      <img src="assets\imagenes\imagen perfil.png" alt="Imagen de perfil">
+      <img id="foto" src="assets\imagenes\imagen perfil.png" alt="Imagen de perfil">
 
-      <div>
+      <div id="textoAcerca">
          <h1>ACERCA DE</h1>
          <p>Mi nombre es Luciana Vallejos, soy técnica en conservación de Obras de Arte. Realizo trabajos de conservación y restauración en distintas instituciones y en paráctica privada sobre distintos materiales y especializándome en textiles.</p>
          <p>Actualmente me encuentro capacitandome en otra area, la programación, a través de la plataforma de Argentina Programa, esperando obtener el título de Full Stack Developer Jr. El portfolio que están viendo es el trabajo final de dicho estudio.</p>
-      </div>
+        
+         </div>
    </div>
 </div>
