--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,19 @@
-*{
-    height: 100vh;
-}
+
 
 header{
   
     background-color: rgba(13, 86, 13, 0.607);
-    height: 50px;
+    height: 8vh;
     width: 100%;
 
 }
 
-main{
-    height: calc(100vh - 100px);
-}
+
 
 footer {
     background-color: rgba(13, 86, 13, 0.607);
-    height: 50px;
+    height: 8vh;
     width: 100%;
+    align-self: flex-end;
 
 }
