--- a/src/app/componentes/acercade/acercade.component.css
+++ b/src/app/componentes/acercade/acercade.component.css
@@ -1,36 +1,53 @@
 #contenedor{
-    background: url(imagenes\banner.png);
-    background-size: 120%;
-    height: 80vh;
     display: flex;
-    justify-content: center;
-    
-    
+    flex-direction: column;
+    align-items: center;
     
 }
+
+#banner{
+   height: 40vh;
+   width: 90%;
+   background-image: url(src\assets\imagenes\banner.png);
+   background-size: cover;
+   background-color: #7910414a;
+   margin-bottom: 30px;
+
+}
+
 
 #acerca{
-    height: 80%;
-    width: 70%;
+    display: flex; 
 
-    display: flex;
-    
+    margin: 20px;
 
-
-    padding: 50px;
-    
     
 }
 
-img {
-    height: 70%;
-    margin: 10px;
+#foto {
+    height: 40vh;
+    margin-top: -100px;
+    margin-right: 30px;
     border: 2px solid black;
     border-radius: 50%;
 }
 
+#textoAcerca{
+    
+    padding: 20px;
+    border-radius: 30px;
+    background: rgb(235,44,83);
+background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
+ }
+
 #acerca p{
-    font-size: 27px;
+    font-size: larger;
     font-weight: bolder;
+    color: white;
     text-align:justify;
+}
+h1{
+    color: white;
+    font-weight: bolder;
+    text-align: right;
 }
