--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 
 body {
     height: 100vh;
-    background: url(imagenes\mosaic-g253ea8d14_1280.jpg);
-    background-size: 100%;
+    background: url(imagenes\background-ga405f6988_1280.png);
+    background-size: cover;
+    background-attachment: fixed;
 }
