Se creo el componente experiencia y se hicieron modificaciones en el componente acercade

--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,1 +1,68 @@
-<p>experiencia works!</p>
+<!-- Columnas de bootstrap -->
+
+<div class="container text-center">
+
+    <h1> EXPERIENCIA LABORAL</h1>
+    
+    <div class="row align-items-start">
+      <div class="col-md-3"> <!-- Con esta clase de bootstrap manejo el tamaño de las columnas -->
+        <p>Actualmente</p>
+      </div>
+      <div class="col">
+       Proyectos de conservación y restauracion
+        Clases de encaje a bolillo y encaje a la aguja
+      </div>
+      <div class="col-md-2">
+        One of three columns
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row align-items-start">
+        <div class="col-md-3">
+          <p>Enero 2019- Febrero 2020</p>
+          
+        </div>
+        <div class="col">
+            Validación y control de datos de usuarios para la agencia de 
+            cambios On-line IB CAMBIO, atención al público y manejo de 
+            correos electrónicos
+        </div>
+        <div class="col-md-2">
+          <img src="assets\imagenes\logo ibcambio.jpg" alt="logo de IBCAMBIO" id="logoIbCambio">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row align-items-start">
+        <div class="col-md-3">
+          <p>Noviembre 2014 - Marzo 2015 (prácticas profesionales)
+            </p>
+        </div>
+        <div class="col">
+            Casa Fernández Blanco: Documentación, investigación y restauración de piezas de la colección textil del museo.
+
+        </div>
+        <div class="col-md-2">
+          <img src="assets\imagenes\logo Fernadez Blanco.jpg" alt="logo de IBCAMBIO" id="logo de la Casa Fernandez Blanco">
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row align-items-start">
+        <div class="col-md-3">
+          <p>Febrero a Julio 2013 (pasantía remunerada) Enero a Junio de 2012 (práctica profesional)
+            </p>
+        </div>
+        <div class="col">
+            Laboratorio de conservación Nicolás Yapuguay: Asistente en tareas de conservación preventiva, documentación, intervenciones directas y control de inventario en la mudanza de libros y documentos pertenecientes al Fondo Antiguo. Manejo de la base de datos de la colección
+        </div>
+        <div class="col-md-2">
+          <img src="assets\imagenes\logo fondo antiguo.jpg" alt="logo del Fondo Antiguo" id="logo de la Casa Fernandez Blanco">
+        </div>
+    </div>
+
+  </div>
