--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,2 +1,7 @@
-<div class="banner"></div>
-<app-acercade></app-acercade>
+
+<div id="general">
+  <app-acercade></app-acercade>
+
+  <app-experiencia id="exp"></app-experiencia>
+
+</div>
