--- a/src/app/componentes/acercade/acercade.component.css
+++ b/src/app/componentes/acercade/acercade.component.css
@@ -6,7 +6,7 @@
 }
 
 #banner{
-   height: 40vh;
+   height: 50vh;
    width: 90%;
    background-image: url(src\assets\imagenes\banner.png);
    background-size: cover;
@@ -18,7 +18,7 @@
 
 #acerca{
     display: flex; 
-
+    width: 65%;
     margin: 20px;
 
     
@@ -37,17 +37,17 @@
     padding: 20px;
     border-radius: 30px;
     background: rgb(235,44,83);
-background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
+    background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
  }
 
 #acerca p{
     font-size: larger;
     font-weight: bolder;
-    color: white;
+    
     text-align:justify;
 }
 h1{
-    color: white;
     font-weight: bolder;
     text-align: right;
+    margin-bottom: 50px;
 }
