--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 
 body {
     height: 100vh;
-    background: url(imagenes\background-ga405f6988_1280.png);
+    background: url(imagenes\vecteezy_modern-blank-background-template-with-pink-and-red-combination_17409297.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
