--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -2,6 +2,10 @@
 <div id="general">
   <app-acercade></app-acercade>
 
-  <app-experiencia id="exp"></app-experiencia>
+  <app-experiencia></app-experiencia>
+
+  <app-educacion></app-educacion>
+
+  <app-skills></app-skills>
 
 </div>
