--- a/src/app/componentes/cabecera/cabecera.component.html
+++ b/src/app/componentes/cabecera/cabecera.component.html
@@ -6,7 +6,11 @@
 
 </div>
 
+
+
 <div id="logoRedes">
+
+    
      <a href="https://www.facebook.com/profile.php?id=100005297475613" target="_blank">
         <img src="assets\imagenes\facebook-logo.png" alt="logo de Facebook">
     </a>
@@ -16,6 +20,8 @@
     <a href="https://www.linkedin.com/in/luciana-yamila-vallejos-281153105/">
         <img src="assets\imagenes\logoLinkedin.com.png" alt="logo de Linkedin">
     </a>
+<app-login></app-login>
+
 
 </div>
 </header>
