--- a/src/app/componentes/acercade/acercade.component.css
+++ b/src/app/componentes/acercade/acercade.component.css
@@ -8,7 +8,7 @@
 #banner{
    height: 50vh;
    width: 90%;
-   background-image: url(src\assets\imagenes\banner.png);
+   
    background-size: cover;
    background-color: #7910414a;
    margin-bottom: 30px;
@@ -23,6 +23,7 @@
 
     
 }
+
 
 #foto {
     height: 40vh;
@@ -51,3 +52,10 @@ h1{
     text-align: right;
     margin-bottom: 50px;
 }
+
+h2{
+    font-weight: bolder;
+    text-align: left;
+    margin-top: 50px;
+}
+
