--- a/src/app/componentes/educacion/educacion.component.css
+++ b/src/app/componentes/educacion/educacion.component.css
@@ -27,13 +27,18 @@ img{
     
 }
 
+.row{
+    margin-bottom: 10px;
+}
+
 h1{
     font-weight: bolder;
     text-align: right;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 hr {
     border: solid 5px black;
+
     
 }
