--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -4,63 +4,26 @@
 
     <h1> EDUCACIÓN <br> FORMAL</h1>
     
-    <div class="row align-items-start">
-      
-       <div class="col-md-2"> <!-- Con esta clase de bootstrap manejo el tamaño de las columnas -->
-        <img src="assets\imagenes\logoumsa.png" alt="Logo de la UMSA">        
+    <div class="row align-items-start" *ngFor="let educacion of listaEducacion">
+      <!-- Con el *ngFor recorro los objetos de una lista-->
+
+      <hr>
+
+      <div class="col-md-2"> <!-- Con esta clase de bootstrap manejo el tamaño de las columnas -->
+        <img [src]=educacion.imag [alt]=educacion.alt>        
       </div>
       
       <div class="col">
-        Licenciatura en Conservación y Restauración de Bienes Culturales. Cursada completa. Falta trabajo final.
+       {{educacion.titulo}}
       </div>
 
       <div class="col-md-3">
-        2011-2014 
+        {{educacion.periodo}}
         <br>
-        UMSA
+        {{educacion.institucion}}
       </div>
       
-    </div>
-
-    <hr>
-
-    <div class="row align-items-start">
-
-    <div class="col-md-2"> 
-        <img src="assets\imagenes\logoumsa.png" alt="Logo de la UMSA">        
-      </div>
-
-      <div class="col">
-        Tecnicatura en Conservación de Obras de Arte
-      </div>
-
-      <div class="col-md-3">
-        2011-2013 
-        <br>
-        UMSA
-      </div>
-    </div>
-   
-
-    <hr>
-
-    <div class="row align-items-start">
-
-    <div class="col-md-2"> 
-        <img src="assets\imagenes\logo UBA.jpg" alt="Logo de la UBA">
-        
-      </div>
-      <div class="col">
-        Diplomatura en Investigación y Conservación Fotográfica Documental con especialización en Conservación
-      </div>
-      <div class="col-md-3">
-        Agosto 2016-Julio 2017
-        <br>
-        UBA - Facultad de Filosofía y Letras
-    </div>
-
-  </div>   
     
-
+    </div>
 
   </div>
