--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -1,18 +1,20 @@
 <p>skills works!</p>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
+<div class="row row-cols-1 row-cols-md-3 g-4" >
+    
+  <div class="col" *ngFor="let skill of listaSkills">
       <div class="card text-center">
-        <img src="assets\imagenes\logoHTML.png" class="card-img-top rounded mx-auto d-block" alt="...">
+        <img [src]= "skill.img" class="card-img-top rounded mx-auto d-block" [alt]="skill.alt">
         <div class="card-body">
-          <h5 class="HTML">HTML 40%</h5>
+          <h5 class="HTML">{{skill.habilidad}} {{skill.porcentaje}}%</h5>
 
           <div class="progress"  role="progressbar" aria-label="Default striped example" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar progress-bar-striped" style="width: 40%"></div>
+            <div class="progress-bar progress-bar-striped" style="width: {{skill.porcentaje}}%"></div>
           </div>      
 
         </div>
       </div>
     </div>
+
     <div class="col">
       <div class="card">
         <img src="..." class="card-img-top" alt="...">
