--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -9,7 +9,7 @@
 
       <hr>
 
-      <div class="col-md-2"> <!-- Con esta clase de bootstrap manejo el tamaño de las columnas -->
+      <div class="col"> <!-- Con esta clase de bootstrap manejo el tamaño de las columnas -->
         <img [src]=educacion.imag [alt]=educacion.alt>        
       </div>
       
@@ -17,7 +17,7 @@
        {{educacion.titulo}}
       </div>
 
-      <div class="col-md-3">
+      <div class="col">
         {{educacion.periodo}}
         <br>
         {{educacion.institucion}}
