--- a/src/app/componentes/experiencia/experiencia.component.css
+++ b/src/app/componentes/experiencia/experiencia.component.css
@@ -10,18 +10,14 @@ img{
    
 }
 
-#cont{
-    display: flex;
-    justify-content: left;
-    
-}
+
 
 .container {
     padding: 20px;
     border-radius: 30px;
     background: rgb(235,44,83);
     background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
-    width: 1000px;
+    width: 80vw;
     margin-left: 90px;
     margin-top: 150px;
     
@@ -35,5 +31,14 @@ h1{
 
 hr {
     border: solid 5px black;
+    
+}
+
+@media (max-width: 700px){
+    .container{
+        width: 90vw;
+        margin-left: 5px;
+               
+    }
     
 }
