--- a/src/app/componentes/skills/skills.component.css
+++ b/src/app/componentes/skills/skills.component.css
@@ -6,7 +6,7 @@ img{
     width: 80%;
     background: rgb(235,44,83);
     background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
-    width: 1000px;
+    width: 80vw;
     margin-left: 90px;
     margin-top: 150px;
 }
