Se agregó el componentes proyectos y sse comenzó a trabajar en los formularios para modificar

--- a/src/app/componentes/cabecera/cabecera.component.html
+++ b/src/app/componentes/cabecera/cabecera.component.html
@@ -12,9 +12,8 @@
 
 
 <div id="logoRedes">
-    
+   <app-modificar></app-modificar>
 
-    
      <a href="https://www.facebook.com/profile.php?id=100005297475613" target="_blank">
         <img src="assets\imagenes\facebook-logo.png" alt="logo de Facebook">
     </a>
