--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -1,45 +1,31 @@
-<p>skills works!</p>
-<div class="row row-cols-1 row-cols-md-3 g-4" >
+
+<div class="row container row-cols-1 row-cols-md-3 g-4" >
+  <h1> SKILLS </h1>
     
-  <div class="col" *ngFor="let skill of listaSkills">
-      <div class="card text-center">
-        <img [src]= "" class="card-img-top rounded mx-auto d-block">
-        <div class="card-body">
-          <h5 class="HTML"></h5>
+  <div class="col" ><!--*ngFor="let skill of listaSkills"-->
+    
+    <div class="card text-center">
 
-          <div class="progress"  role="progressbar" aria-label="Default striped example" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar progress-bar-striped" style="width: 50%"></div>
-          </div>      
+     <img [src]= "" class="card-img-top rounded mx-auto d-block">
+       
+      <div class="card-body">
+        
+        <h5>HTML</h5>
 
-        </div>
+        <div class="progress"  role="progressbar" aria-label="Default striped example" aria-valuemin="0" aria-valuemax="100">
+          <div class="progress-bar progress-bar-striped" style="width: 50%"></div>
+        </div>      
+
       </div>
+
     </div>
 
-    <!-- <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div> 
-    </div>
-  </div>-->
+  </div>
+
+
+</div>
+
+
+
+
+
