--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,11 +1,13 @@
 
 <div id="general">
-  <app-acercade></app-acercade>
+   <app-acercade></app-acercade>
 
   <app-experiencia></app-experiencia>
 
   <app-educacion></app-educacion>
 
   <app-skills></app-skills>
+
+  <app-proyectos></app-proyectos>
 
 </div>
