--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -1,16 +1,3 @@
-img{
-    width: 60px;
-}
-
-.col{
-    padding: 10px;
-        
-    font-size: large;
-    font-weight: bold;
-   
-}
-
-
 .container {
     padding: 20px;
     border-radius: 30px;
@@ -21,23 +8,14 @@ img{
     margin-top: 150px;
     
 }
-
-.row{
-    margin-bottom: 10px;
-}
-
-h1{
+h1 {
+    width: 100%;
     font-weight: bolder;
-    text-align: right;
-    margin-bottom: 30px;
 }
 
-hr {
-    border: solid 5px black;
+.card{
 
-    
-}
+    background: rgb(235,44,83);
+    background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
 
-.modal-body{
-    color: black;
 }
