--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,6 @@ body {
     background-size: cover;
     background-attachment: fixed;
 }
+
+@import "~bootstrap-icons/font/bootstrap-icons.css"
+/* Esta importación junto con su respectivo paquete de npm son para poder utilizar los íconos que provee bootstrap */
