--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -10,60 +10,36 @@
       <hr>
 
       <div class="col"> <!-- Con esta clase de bootstrap manejo el tamaño de las columnas -->
-        <img [src]=educacion.imag [alt]=educacion.alt>        
-      </div>
-      
-      <div class="col">
-       {{educacion.titulo}}  
-
-       
-
-
-
-      </div>
-
-      <div class="col">
-        {{educacion.periodo}}
-        <br>
-        {{educacion.institucion}}
-        {{educacion.id}}
-
-
-
-        <!-- Button trigger modal      con attribute binding para que abran distintos modales según corresponda, ya que si no el data-bs-target del boton (donde es necesario un string luego del asterisco) y el id del modal, los distintos botones abririan el mismo modal.-->
-<button type="button{{educacion.id}}" class="btn btn-primary" data-bs-toggle="modal" [attr.data-bs-target]="'#edu'+educacion.id">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" [attr.id]="'edu'+educacion.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        
-        
-        {{educacion.periodo}}
-        <br>
-        {{educacion.institucion}}
-        {{educacion.id}}
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
+        <img [src]=educacion.imag [alt]=educacion.alt>
+        <div>             
+           <app-formulario-educacion 
+              valorId="{{educacion.id}}"
+              nombreModal="MODIFICAR EDUCACION"
+              nombre="edu"
+              valorDescripcion="{{educacion.titulo}}"
+              valorInstitucion="{{educacion.institucion}}"
+              valorLinkImagen="{{educacion.imag }}"
+              valorAlternativo="{{educacion.alt}}">
+            </app-formulario-educacion>
 </div>
 
-
-
+    
+        
       </div>
       
+      <div class="col">
+       {{educacion.titulo}}     
+      </div>
+
+      <div class="col">
+        {{educacion.periodo}}
+        <br>
+        {{educacion.institucion}}
+        {{educacion.id}}
+      </div>
+
+
+    
     
     </div>
 
