--- a/src/app/componentes/cabecera/cabecera.component.html
+++ b/src/app/componentes/cabecera/cabecera.component.html
@@ -8,19 +8,27 @@
 </div>
 
 
+
+
     <app-login></app-login>
 
+    
 
 <div id="logoRedes">
-   <app-modificar></app-modificar>
+    <!-- En el componente modificar se encuentra el formulario para modificar los link de las redes sociales -->
+   <app-modificar
+   linkFace="{{redes[0].linkFacebook}}"
+   linkInsta="{{redes[0].linkInstagram}}"
+   linklinke="{{redes[0].linkLinkelin}}"
+   ></app-modificar>
 
-     <a href="https://www.facebook.com/profile.php?id=100005297475613" target="_blank">
+     <a href= {{redes[0].linkFacebook}} target="_blank">
         <img src="assets\imagenes\facebook-logo.png" alt="logo de Facebook">
     </a>
-    <a href="https://www.instagram.com/lucianay_vallejos/">
+    <a href= {{redes[0].linkInstagram}}>
         <img src="assets\imagenes\logoInsta.com.png" alt="logo de Instagram">
     </a>
-    <a href="https://www.linkedin.com/in/luciana-yamila-vallejos-281153105/">
+    <a href= {{redes[0].linkLinkelin}}>
         <img src="assets\imagenes\logoLinkedin.com.png" alt="logo de Linkedin">
     </a>
 
