--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -2,25 +2,35 @@
 
 <div class="container text-center">
 
-    <h1> EDUCACIÓN <br> FORMAL</h1>
+    <h1> EDUCACIÓN <br> FORMAL</h1> 
+    <app-formulario-educacion
+              valorId=""
+              nombreModal="CREAR EDUCACION"
+              nombre="edu">
+              
+    </app-formulario-educacion>
     
-    <div class="row align-items-start" *ngFor="let educacion of listaEducacion">
+    <div class="row align-items-start" *ngFor="let educacion of educacion">
       <!-- Con el *ngFor recorro los objetos de una lista-->
 
       <hr>
 
       <div class="col"> <!-- Con esta clase de bootstrap manejo el tamaño de las columnas -->
-        <img [src]=educacion.imag [alt]=educacion.alt>
+        <img [src]=educacion.linkLogo [alt]=educacion.textoAlternativo>
         <div>             
            <app-formulario-educacion 
               valorId="{{educacion.id}}"
               nombreModal="MODIFICAR EDUCACION"
               nombre="edu"
-              valorDescripcion="{{educacion.titulo}}"
+              valorDescripcion="{{educacion.descripcion}}"
               valorInstitucion="{{educacion.institucion}}"
-              valorLinkImagen="{{educacion.imag }}"
-              valorAlternativo="{{educacion.alt}}">
+              valorLinkImagen="{{educacion.linkLogo }}"
+              valorAlternativo="{{educacion.textoAlternativo}}"
+             (onClick)="otrafuncion()"
+              >
             </app-formulario-educacion>
+            
+            <button type="button" class="btn btn-dark" (click)="eliminarEducacion(educacion.id)">Eliminar</button>
 </div>
 
     
@@ -28,11 +38,11 @@
       </div>
       
       <div class="col">
-       {{educacion.titulo}}     
+       {{educacion.descripcion}}     
       </div>
 
       <div class="col">
-        {{educacion.periodo}}
+        {{educacion.fechaInicio}}
         <br>
         {{educacion.institucion}}
         {{educacion.id}}
