--- a/src/app/componentes/formulario-skills/formulario-skills.component.html
+++ b/src/app/componentes/formulario-skills/formulario-skills.component.html
@@ -1,8 +1,8 @@
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" [attr.data-bs-target]="'#form'+valorId+nombre" >
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" [attr.data-bs-target]="'#form'+valorId+'skill'" >
     {{nombreBoton}}
   </button>
 
-  <div class="modal fade" [attr.id]="'form'+valorId+nombre" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" [attr.id]="'form'+valorId+'skill'" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
 
       <div class="modal-content">
@@ -20,18 +20,17 @@
 
                 <div>
                 <label for="porcentaje">PORCENETAJE </label>
-                <input id="porcentaje" type="number" formControlName="porcentaje"></div>
+                <input id="porcentaje" type="number" formControlName="porcentaje" placeholder="número del 1 al 100"></div>
               
                 <div>
                 <label for="otros">¿DESEA AGRGAR ALGO MAS? </label>
-                <input id="otros" type="text" formControlName="otros"></div>
+                <input id="otros" type="text" formControlName="otros" placeholder="Si corresponde"></div>
     
 
                     
                 <button *ngIf="valorId!=''"
                 type="submit" class="btn btn-primary" (click)="modificarskill(valorId)" [disabled]="!skillsForm.valid" data-bs-dismiss="modal">GUARDAR MODIFICACION</button>
 
-                <button type="button" (click)="avisar()">boton</button>
 
                 <!-- Boton para confirmar la modificacion de educacion -->
                 <button *ngIf="valorId ===''"
